# memol-rs

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .travis.yml  Cargo.toml  build.rs  license.txt  readme.adoc  readme.md  test.mol
.cargo/: config  config.toml
.github/workflows/: ci.yml
doc/: makefile  tutorial.ly
examples/: gymnopedie.mol
gui/: Cargo.toml  build.rs
gui/fonts/: license.txt
gui/src/: imgui.rs  imutil.rs  main.rs  renderer.rs  window.rs
imgui/: Cargo.toml  build.rs
imgui/src/: imgui.cpp  imgui.hpp  lib.rs
memol/: Cargo.toml  build.rs
memol/src/: ast.rs  chord.rs  generator.rs  jack.rs  lib.rs  main.rs  midi.rs  misc.rs  notify.rs  parser.lalrpop  player.rs  player_jack.rs  random.rs  ratio.rs  scoregen.rs  smf.rs  test.rs  valuegen.rs  voicing.rs
memol/src/generator/: eval.rs  mod.rs  score.rs  value.rs
memol_cli/: Cargo.toml
memol_cli/src/: ipc.rs  jack.rs  lib.rs  main.rs  notify.rs  player.rs  player_jack.rs  player_net.rs
memol_gui/: Cargo.toml  build.rs
memol_gui/fonts/: license.txt
memol_gui/res/: license.txt  memol_gui.exe.manifest
memol_gui/src/: compile_thread.rs  imgui.rs  imutil.rs  main.rs  main_widget.rs  model.rs  piano_roll.rs  pianoroll.rs  renderer.rs  sequencer_widget.rs  transport_widget.rs  window.rs
memol_nih/: Cargo.toml
memol_nih/src/: lib.rs
memol_util/: Cargo.toml
memol_util/src/: lib.rs  player_jack.rs
memol_vst/: Cargo.toml
memol_vst/src/: events.rs  lib.rs
samples/: gymnopedie.mol
src/: ast.rs  cext.h  generator.rs  irgen.rs  jack.rs  lib.rs  main.rs  midi.rs  misc.rs  notify.rs  parser.lalrpop  player.rs  ratio.rs  scoregen.rs  valuegen.rs
vst/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
