[package]
name = "memol"
version = "0.1.0"
authors = ["Yasuhiro Fujii <y-fujii@mimosa-pudica.net>"]
build = "build.rs"
edition = "2021"
workspace = ".."

[dependencies]
lalrpop-util = { version = "*", features = ["lexer"] }
regex = "*"
serde = { version = "*", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "*", features = ["lexer"] }
