[package]
name = "memol_gui"
version = "0.1.0"
authors = ["Yasuhiro Fujii <y-fujii@mimosa-pudica.net>"]
build = "build.rs"
edition = "2018"
workspace = ".."

[dependencies]
gumdrop = "*"
gl = "*"
glutin = "0.22.0-alpha1"
image = "*"
clipboard = "*"
memol = { path = "../memol" }
memol_cli = { path = "../memol_cli" }

[build-dependencies]
cc = "*"
bindgen = "*"
