[package]
name = "memol_gui"
version = "0.1.0"
authors = ["Yasuhiro Fujii <y-fujii@mimosa-pudica.net>"]
build = "build.rs"
edition = "2021"
workspace = ".."

[dependencies]
gumdrop = "*"
gl = "*"
glutin = "0.29.*"
image = "*"
copypasta = "*"
memol = { path = "../memol" }
memol_util = { path = "../memol_util" }

[build-dependencies]
cc = "*"
bindgen = "*"
