[package]
name = "memol_vst"
version = "0.1.0"
authors = ["Yasuhiro Fujii <y-fujii@mimosa-pudica.net>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/y-fujii/rust-vst", branch = "sebbert_work" }
#vst = { path = "../../rust-vst" }
memol = { path = "../memol" }
memol_cli = { path = "../memol_cli" }

[lib]
crate-type = ["cdylib"]
