[package]
name = "memol_vst"
version = "0.1.0"
authors = ["Yasuhiro Fujii <y-fujii@mimosa-pudica.net>"]
edition = "2021"

[dependencies]
vst = { version = "*", features = ["disable_deprecation_warning"] }
memol = { path = "../memol" }
memol_util = { path = "../memol_util" }

[lib]
crate-type = ["cdylib"]
